[package]
name = "feroxbuster"
version = "2.6.0"
authors = ["Ben 'epi' Risher (@epi052)"]
license = "MIT"
edition = "2021"
homepage = "https://github.com/epi052/feroxbuster"
repository = "https://github.com/epi052/feroxbuster"
description = "A fast, simple, recursive content discovery tool."
categories = ["command-line-utilities"]
keywords = ["pentest", "enumeration", "url-bruteforce", "content-discovery", "web"]
exclude = [".github/*", "img/*", "check-coverage.sh"]
build = "build.rs"

[badges]
maintenance = { status = "actively-developed" }

[build-dependencies]
clap = { version = "3.1.5", features = ["wrap_help", "cargo"] }
clap_complete = "3.1.1"
regex = "1.5.4"
lazy_static = "1.4.0"
dirs = "4.0.0"

[dependencies]
scraper = "0.12.0"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
log = "0.4.14"
env_logger = "0.9.0"
reqwest = { version = "0.11.9", features = ["socks"] }
# uses feature unification to add 'serde' to reqwest::Url
url = { version = "2.2.2", features = ["serde"] }
serde_regex = "1.1.0"
clap = { version = "3.1.5", features = ["wrap_help", "cargo"] }
lazy_static = "1.4.0"
toml = "0.5.8"
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0.79"
uuid = { version = "0.8.2", features = ["v4"] }
indicatif = "0.15"
console = "0.15.0"
openssl = { version = "0.10.38", features = ["vendored"] }
dirs = "4.0.0"
regex = "1.5.4"
crossterm = "0.23.0"
rlimit = "0.7.0"
ctrlc = "3.2.1"
fuzzyhash = "0.2.1"
anyhow = "1.0.55"
leaky-bucket = "0.10.0"  # todo: upgrade, will take a little work/thought since api changed

[dev-dependencies]
tempfile = "3.3.0"
httpmock = "0.6.6"
assert_cmd = "2.0.4"
predicates = "2.1.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[package.metadata.deb]
section = "utility"
license-file = ["LICENSE", "4"]
conf-files = ["/etc/feroxbuster/ferox-config.toml"]
assets = [
    ["target/release/feroxbuster", "/usr/bin/", "755"],
    ["ferox-config.toml.example", "/etc/feroxbuster/ferox-config.toml", "644"],
    ["shell_completions/feroxbuster.bash", "/usr/share/bash-completion/completions/feroxbuster.bash", "644"],
    ["shell_completions/feroxbuster.fish", "/usr/share/fish/completions/feroxbuster.fish", "644"],
    ["shell_completions/_feroxbuster", "/usr/share/zsh/vendor-completions/_feroxbuster", "644"],
]
