[package]
name = "feroxbuster"
version = "2.7.1"
authors = ["Ben 'epi' Risher (@epi052)"]
license = "MIT"
edition = "2021"
homepage = "https://github.com/epi052/feroxbuster"
repository = "https://github.com/epi052/feroxbuster"
description = "A fast, simple, recursive content discovery tool."
categories = ["command-line-utilities"]
keywords = [
    "pentest",
    "enumeration",
    "url-bruteforce",
    "content-discovery",
    "web",
]
exclude = [".github/*", "img/*", "check-coverage.sh"]
build = "build.rs"

[badges]
maintenance = { status = "actively-developed" }

[build-dependencies]
clap = { version = "4.0.8", features = ["wrap_help", "cargo"] }
clap_complete = "4.0.2"
regex = "1.5.5"
lazy_static = "1.4.0"
dirs = "4.0.0"

[dependencies]
scraper = "0.13.0"
futures = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
log = "0.4.17"
env_logger = "0.9.0"
reqwest = { version = "0.11.10", features = ["socks"] }
# uses feature unification to add 'serde' to reqwest::Url
url = { version = "2.2.2", features = ["serde"] }
serde_regex = "1.1.0"
clap = { version = "4.0.8", features = ["wrap_help", "cargo"] }
lazy_static = "1.4.0"
toml = "0.5.9"
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
uuid = { version = "1.0.0", features = ["v4"] }
indicatif = "0.15"
console = "0.15.2"
openssl = { version = "0.10.40", features = ["vendored"] }
dirs = "4.0.0"
regex = "1.5.5"
crossterm = "0.25.0"
rlimit = "0.8.3"
ctrlc = "3.2.2"
fuzzyhash = "0.2.1"
anyhow = "1.0.57"
leaky-bucket = "0.12.1"

[dev-dependencies]
tempfile = "3.3.0"
httpmock = "0.6.6"
assert_cmd = "2.0.4"
predicates = "2.1.1"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[package.metadata.deb]
section = "utility"
license-file = ["LICENSE", "4"]
conf-files = ["/etc/feroxbuster/ferox-config.toml"]
assets = [
    [
        "target/release/feroxbuster",
        "/usr/bin/",
        "755",
    ],
    [
        "ferox-config.toml.example",
        "/etc/feroxbuster/ferox-config.toml",
        "644",
    ],
    [
        "shell_completions/feroxbuster.bash",
        "/usr/share/bash-completion/completions/feroxbuster.bash",
        "644",
    ],
    [
        "shell_completions/feroxbuster.fish",
        "/usr/share/fish/completions/feroxbuster.fish",
        "644",
    ],
    [
        "shell_completions/_feroxbuster",
        "/usr/share/zsh/vendor-completions/_feroxbuster",
        "644",
    ],
]
